# twirp-rs

./: Cargo.toml  LICENSE
examples/service-gen/: Cargo.toml  build.rs
examples/service-gen/src/: main.rs
src/: lib.rs  service_gen.rs  service_run.rs
