[package]
name = "twirp-rs"
version = "0.1.0"
authors = ["Vicent Marti <vmg@strn.cat>"]
edition = "2018"

[features]
service-gen = ["prost-build", "proc-macro2", "quote"]

[dependencies]
futures = "0.1"
hyper = "0.12"
prost = "0.4"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

prost-build = { version = "0.4", optional = true }
proc-macro2 = { version = "0.4", optional = true }
quote = { version = "0.6", optional = true }
